# akv

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
libarchive_src/: Cargo.toml  build.rs
libarchive_src/src/: lib.rs
scripts/: ci.mjs  ci_test.mjs  vcpkg_install.mjs
src/: error.rs  lib.rs
src/reader/: callback.rs  entry_reader.rs  mod.rs  seek_conv.rs
src/reader/entry/: io.rs  mod.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
tests/: reader.rs
