[package]
name = "akv"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"

[dependencies]
sys = { path = "./sys", package = "libarchive_sys" }
libc = "0.2.137"
always-assert = "0.1.2"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }

[workspace]
members = [ "sys" ]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
