[package]
name = "akv"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"

[dependencies]
libarchive_src = { path = "libarchive_src" }
libc = "0.2.137"
always-assert = "0.1.2"

[workspace]
members = ["libarchive_src"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
