[package]
name = "libarchive_sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.2.137"
lzma-sys = { version = "0.1.20", features = ["static"] }
bzip2-sys = { version = "0.1.11", features = [ "static" ] }
libz-sys = { version = "1.1.8", features = ["static"] }
zstd-sys = "2.0.4"
lz4-sys = "1.9.4"


# libarchive on Apple Platforms doesn't use openssl:
# https://github.com/libarchive/libarchive/blob/v3.6.2/CMakeLists.txt#L809
# https://github.com/libarchive/libarchive/blob/v3.6.2/libarchive/archive_hmac_private.h#L46
[target.'cfg(not(target_vendor = "apple"))'.dependencies]
openssl-sys = { version = "0.9.80", features = ["vendored"] }

[build-dependencies]
bindgen = "0.63.0"
cmake = "0.1.49"
